# adelfa

./: .gitattributes  .gitignore  .ocamlformat  Makefile  README  README.md  _tags  adelfa.opam  dune-project  sample_interaction.txt  system_description.txt  system_reference.txt  todo.org  web_page_notes.org
.github/workflows/: build-action.yml
PG/: README.md  adelfa-syntax.el  adelfa.el
PG/adelfa/: adelfa-syntax.el
bundle/: bundle.ml  dune
documentation-notes/: LF-Reasoning.tex  def.thm
emacs/: README
examples.bak/: README
planning_notes/: README  commands_syntax.txt  impl_components.txt  impl_context_exprs.txt  impl_context_schemas.txt  impl_datatypes.txt  impl_formulas.txt  impl_lf_sig.txt  impl_proof_state.txt  impl_sequents.txt  impl_tactics.txt  impl_terms.txt  impl_types.txt  term_syntax.txt  theoremfile.txt
src/: context.ml  context.mli  definition.mli  dune  extensions.ml  formula.ml  formula.mli  globals.ml  lexer.mll  main.ml  parser.mly  print.ml  print.mli  prover.ml  prover.mli  sequent.ml  sequent.mli  signature.ml  signature.mli  state.ml  state.mli  subordination.ml  subordination.mli  table.ml  table.mli  tactics.ml  tactics.mli  term.ml  term.mli  translate.ml  translate.mli  twelfLexer.mll  twelfParser.mly  type.ml  type.mli  typing.ml  typing.mli  unify.ml  unify.mli  uterms.ml  (+3 more)
test/: context_test.ml  dune  etanorm_test.ml  formula_test.ml  prover_test.ml  sequent_test.ml  state_test.ml  subordination_test.ml  tactics_test.ml  test.ml  test_helper.ml  typing_test.ml  unify_test.ml
theory_notes/: macros.tex  proof_rules.tex  soundness_plan.txt
(+110 files in other folders)
